--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,22 +28,17 @@
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+          Manage Reimbursements
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#" id = "submitReimb">Submit Reimbursement</a>
           <a class="dropdown-item disabled" href="#" id = "submitReimb">Check Reimbursements</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
+          </div>
+          </li>
     </ul>
   </div>
 </nav>
-<div id = "view">Testing</div>
+<div id = "view"></div>
 
 <script src= "app.js" type = "text/javascript"></script>
 </body>
